--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    
+    <div class="container">
+        <div class="row">
+      
+        </div>
+      </div>
 
 
     <script src="./js/script.js"></script>
